# Decoding-Au-clusters

./: .gitignore  README.md  pyproject.toml  requirements.txt
dimredpy/: README.md  __init__.py
dimredpy/fitsne/: __init__.py  fitsne.py
dimredpy/mbar/: __init__.py  mbar.py
dimredpy/shared/: __init__.py  analysis.py  descriptors.py  io.py  metrics.py  transfer.py
dimredpy/sketchmap/: __init__.py  landmark.py  projection.py  reduction.py
dimredpy/tests/: test_fitsne.py  test_mbar.py  test_shared_analysis.py  test_shared_core.py  test_shared_descriptors.py  test_shared_io.py  test_sketchmap_landmark.py  test_sketchmap_projection.py  test_sketchmap_reduction.py  test_umap_embed.py
dimredpy/umap_embed/: __init__.py  umap_embed.py
dimredpy_vs_others/: extract_subset.py  subset_10000.txt
dimredpy_vs_others/dimredpy_vs_fitsne/: verify_parity_fitsne.ipynb  verify_parity_fitsne.py  verify_performance_fitsne.ipynb  verify_performance_fitsne.py
dimredpy_vs_others/dimredpy_vs_mbar/: verify_parity_mbar.ipynb  verify_parity_mbar.py  verify_performance_mbar.ipynb  verify_performance_mbar.py
dimredpy_vs_others/dimredpy_vs_sketchmap/: verify_parity_sketchmap.py  verify_performance_sketchmap.py
dimredpy_vs_others/dimredpy_vs_umap/: verify_parity_umap.ipynb  verify_parity_umap.py  verify_performance_umap.ipynb  verify_performance_umap.py
experiments/: au13_validation.ipynb  au13_validation.py
reference_frameworks/: README.md
reference_frameworks/pymbar/pymbar/: __init__.py  confidenceintervals.py  fes.py  mbar.py  mbar_solvers.py  utils.py
reference_frameworks/sketch-map/python_wrapper/: pyproject.toml  setup.py
reference_frameworks/sketch-map/python_wrapper/src/sketchmap_cpp/: __init__.py  _bindings.cpp
sketch-map/: .gitignore  ARCHITECTURE.md
sketch-map/libs/: tbdefs.hpp
sketch-map/python_wrapper/: README.md
(+18 files in other folders)
