[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimredpy"
version = "0.1.0"
description = "DimRedPy -- Unified Python framework for nonlinear dimensionality reduction, free-energy surfaces, and structural analysis"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.9"
authors = [
    { name = "DimRedPy Developers" }
]
keywords = [
    "dimensionality-reduction",
    "sketch-map",
    "t-SNE",
    "FIt-SNE",
    "UMAP",
    "MBAR",
    "molecular-dynamics",
    "atomic-clusters",
    "thermodynamics",
    "free-energy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
sketchmap = []
fitsne = ["openTSNE>=1.0"]
umap = ["umap-learn>=0.5"]
mbar = ["pymbar>=4.0"]
gpu  = ["torch>=2.0"]
all  = ["openTSNE>=1.0", "umap-learn>=0.5", "pymbar>=4.0", "torch>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dimredpy*"]
